--- a/login-page.html
+++ b/login-page.html
@@ -37,7 +37,7 @@
 	    <div id='body'>
 		<br/><br/><br/><br/><br/>
 		<center>
-		<h1 style='color:chocolate ; font-family:Franklin Gothic Medium, Arial Narrow, Arial, sans-serif;'> Hotel Hub </h1></center>
+		<h1 style='color:chocolate ; font-family:Franklin Gothic Medium, Arial Narrow, Arial, sans-serif;'> title </h1></center>
 		<form action='server.php' method='get'>
 		<frame>
 		<center>
@@ -50,7 +50,7 @@
 		</frame>
 		</div>
 		<center><footer style="color:chocolate; font-size: medium;">
-			Khashayar-company<br/>2022-2023<br/>
+			title-company<br/>2022-2023<br/>
 		</footer></center></div>
 		</div>
 	</body>
