--- a/login-page.html
+++ b/login-page.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 	    <meta charset='UTF-8'>
-		<title>www.HotelHub.com</title>
+		<title>www.title.com</title>
 		<style>
 		body
 		{margin:0 ;
