--- a/mini-project.html
+++ b/mini-project.html
@@ -83,7 +83,7 @@ span , p{
   </head>
   <body>
       <?php
-        if(user_is-logged()){
+        if(user-is-logged()){
             echo' ! در سایت وارد شده اید';
         }
         else{
